--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,10 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.11"
+polars = "^0.20.29"
+fastapi = {extras = ["all"], version = "^0.111.0"}
+xlsx2csv = "^0.8.2"
+scikit-learn = "^1.5.0"
 
 
 [build-system]
