--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,8 @@ polars = "^0.20.29"
 fastapi = {extras = ["all"], version = "^0.111.0"}
 xlsx2csv = "^0.8.2"
 scikit-learn = "^1.5.0"
+pandas = "^2.2.2"
+pyarrow = "^16.1.0"
 
 
 [build-system]
