--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ xlsx2csv = "^0.8.2"
 scikit-learn = "^1.5.0"
 mlflow = "^2.13.2"
 pandas = "^2.2.2"
+ruff = "^0.4.8"
 
 [build-system]
 requires = ["poetry-core"]
