--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,8 @@ scikit-learn = "^1.5.0"
 mlflow = "^2.13.2"
 pandas = "^2.2.2"
 ruff = "^0.4.8"
+pydantic = "^2.7.3"
+pydantic-settings = "^2.3.1"
 
 [build-system]
 requires = ["poetry-core"]
