--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ pandas = "^2.2.2"
 ruff = "^0.4.8"
 pydantic = "^2.7.3"
 pydantic-settings = "^2.3.1"
+pre-commit = "^3.7.1"
 
 [build-system]
 requires = ["poetry-core"]
