--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ ruff = "^0.4.8"
 pydantic = "^2.7.3"
 pydantic-settings = "^2.3.1"
 pre-commit = "^3.7.1"
+typer = "^0.12.3"
 
 [build-system]
 requires = ["poetry-core"]
