--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -8,6 +8,8 @@ repos:
       - id: end-of-file-fixer
       - id: check-yaml
       - id: check-added-large-files
+        args: ["--maxkb=2000"]
+        exclude: ^(notebooks/|tmp/|data/)
       - id: check-ast
       - id: check-json
       - id: detect-private-key
