--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,12 @@ pydantic-settings = "^2.3.1"
 pre-commit = "^3.7.1"
 typer = "^0.12.3"
 
+
+[tool.poetry.dev-dependencies]
+pytest = "^8.2.2"
+pytest-cov = "^5.0.0"
+
+
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
