--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ pydantic = "^2.7.3"
 pydantic-settings = "^2.3.1"
 pre-commit = "^3.7.1"
 typer = "^0.12.3"
+great-expectations = "^0.18.16"
 
 
 [tool.poetry.dev-dependencies]
