--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -4,9 +4,20 @@ services:
       context: .
       dockerfile: Dockerfile
     container_name: faheem
-    command: uvicorn faheem.main:app --host 0.0.0.0 --port 3003 --reload --reload-include *
+    command:
+      [
+        "uvicorn",
+        "faheem.server:app",
+        "--host",
+        "0.0.0.0",
+        "--port",
+        "3030",
+        "--reload",
+        "--reload-include",
+        "*",
+      ]
     ports:
-      - 8000:3003
+      - 8000:3030
     volumes:
       - .:/app
     env_file:
