--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,8 @@ pydantic-settings = "^2.3.1"
 pre-commit = "^3.7.1"
 typer = "^0.12.3"
 great-expectations = "^0.18.16"
+sqlalchemy = "^2.0.31"
+alembic = "^1.13.2"
 
 
 [tool.poetry.dev-dependencies]
