--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,24 +1,31 @@
+version: "3.8"
+
 services:
-  app:
-    build:
-      context: .
-      dockerfile: Dockerfile
-    container_name: faheem
-    command:
-      [
-        "uvicorn",
-        "faheem.server:app",
-        "--host",
-        "0.0.0.0",
-        "--port",
-        "3030",
-        "--reload",
-        "--reload-include",
-        "*",
-      ]
+  web:
+    build: .
+    container_name: faheem_app
+    command: ["fastapi", "run", "faheem/server.py"]
     ports:
-      - 8000:3030
+      - "8000:8000"
+    depends_on:
+      - db
+    environment:
+      - DATABASE_URL=${DATABASE_URL}
     volumes:
-      - .:/app
-    env_file:
-      - .env
+      - .:/faheem
+      - .:/alembic
+
+  db:
+    image: postgres:13
+    container_name: faheem_db
+    environment:
+      POSTGRES_USER: ${DATABASE_USERNAME}
+      POSTGRES_PASSWORD: ${DATABASE_PASSWORD}
+      POSTGRES_DB: ${DATABASE_NAME}
+    ports:
+      - "5432:5432"
+    volumes:
+      - postgres_data:/var/lib/postgresql/data
+
+volumes:
+  postgres_data:
