--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,7 @@ typer = "^0.12.3"
 great-expectations = "^0.18.16"
 sqlalchemy = "^2.0.31"
 alembic = "^1.13.2"
+psycopg2-binary = "^2.9.9"
 
 
 [tool.poetry.dev-dependencies]
