🗃️ DB: add data_sources and raw_data table

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -13,7 +13,7 @@ services:
       - DATABASE_URL=${DATABASE_URL}
     volumes:
       - .:/faheem
-      - .:/alembic:versions
+      - ./alembic:/alembic
 
   db:
     image: postgres:13
