--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,8 @@ great-expectations = "^0.18.16"
 sqlalchemy = "^2.0.31"
 alembic = "^1.13.2"
 psycopg2-binary = "^2.9.9"
+passlib = "^1.7.4"
+bcrypt = "^4.1.3"
 
 
 [tool.poetry.dev-dependencies]
