--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ alembic = "^1.13.2"
 psycopg2-binary = "^2.9.9"
 passlib = "^1.7.4"
 bcrypt = "^4.1.3"
+python-jose = {extras = ["cryptography"], version = "^3.3.0"}
 
 [tool.poetry.group.dev.dependencies]
 polars = "^0.20.29"
